# xtrusio

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  Algo.md  CLAUDE.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  infra.md  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0000_init_extensions.py  0001_init_tenants_platform_users.py  0002_platform_settings_and_tenant_memberships.py  0003_fix_rls_recursion_and_grants.py  0004_platform_and_tenant_invites.py  0005_platform_invite_supabase_user_id.py  0006_rbac_foundation.py  0007_rls_permission_engine.py  0008_retire_enum_disjunct.py  0009_rbac_governance_triggers.py  0010_rbac_integrity.py  0011_audit_log_indexes.py  0012_invite_email_outbox.py  0013_rbac_reconciler_role.py  0014_job_runs.py
apps/api/src/xtrusio_api/: main.py
apps/api/tests/: _cleanup.py  conftest.py  test_cors.py  test_health.py  test_lifespan.py  test_no_super_admin_creation.py
apps/api/tests/core/: test_audit.py  test_audit_catalog.py  test_auth.py  test_auth_jwks.py  test_config_cursor_key.py  test_cursor_signature.py  test_email_throttle.py  test_es256_jwt.py  test_logging_robustness.py  test_pagination.py  test_security_headers.py  test_url_resolve.py
apps/api/tests/integration/: test_audit_log_indexes_used.py  test_db_pool_config.py  test_invite_full_flow.py  test_invite_outbox.py  test_jwks_rotation.py  test_me_batched_perms.py  test_no_unbounded_lists.py  test_onboarding_race.py  test_perm_cache.py  test_reconcile_single_worker.py  test_signup_to_tenant_flow.py
apps/api/tests/migrations/: test_0009_triggers.py  test_0010_rbac_integrity.py  test_0013_reconciler_role.py
apps/api/tests/rbac/: test_catalog.py  test_grants.py  test_migration_0006.py  test_models.py  test_reconcile.py  test_reconcile_user_roles.py
apps/api/tests/rls/: conftest.py  test_permission_engine_rls.py  test_platform_invites_rls.py  test_platform_settings_rls.py  test_tenant_invites_rls.py  test_tenant_memberships_rls.py  test_tenants_rls.py
apps/api/tests/routes/: test_audit_catalog.py  test_health.py  test_internal_auth_events.py  test_invite_acceptance.py  test_invite_app_metadata.py  test_jwt_verification.py  test_me.py  test_onboarding.py  test_permissions_catalog.py  test_platform_audit_log.py  test_platform_clients.py  test_platform_invites.py  test_platform_job_runs.py  test_platform_roles.py  (+20 more)
(+422 files in other folders)
