[tool.uv]
required-version = ">=0.11.0"

[tool.uv.workspace]
members = ["apps/api"]

# requires-python at workspace root silences uv's default warning.
# Each member's own pyproject.toml may pin a tighter range.
[project]
name = "xtrusio-workspace"
version = "0.0.0"
requires-python = ">=3.12,<3.13"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["node_modules", "dist", "build", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",        # pycodestyle, pyflakes
    "I",                  # isort
    "UP",                 # pyupgrade
    "B",                  # bugbear
    "SIM",                # simplify
    "ASYNC",              # async correctness
    "N",                  # naming
    "RUF",                # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["node_modules", "dist", "build", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["apps/api/tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ml: marks tests requiring ML models (deselect with '-m \"not ml\"')",
    "perf: marks performance benchmarks (deselect with '-m \"not perf\"')",
]
