[project]
name = "xtrusio-api"
version = "0.0.0"
description = "Xtrusio platform API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi~=0.115.0",
    "httpx~=0.27.0",
    "uvicorn[standard]~=0.30.0",
    "pydantic[email]~=2.9.0",
    "pydantic-settings~=2.5.0",
    "sqlalchemy[asyncio]~=2.0.36",
    "asyncpg~=0.30.0",
    "alembic~=1.14.0",
    "python-jose[cryptography]~=3.3.0",
    "supabase~=2.10.0",
    "typer~=0.13.0",
    "slowapi~=0.1.9",
    "limits[redis]~=5.8.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.25.0",
    "httpx~=0.27.0",
    "ruff~=0.6.0",
    "mypy~=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xtrusio_api"]
